--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "openai": "^4.67.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.27.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
