Chore : tsconfig zustand => store로 변경

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -28,7 +28,7 @@
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@store/*": ["src/zustand/*"],
+      "@store/*": ["src/store/*"],
       "@styles/*": ["src/styles/*"],
       "@features/*": ["src/features/*"]
     }
