--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@features/*": ["features/*"],
       "@hooks/*": ["hooks/*"],
       "@pages/*": ["pages/*"],
+      "@router/*": ["router/*"], // router 경로 추가
       "@services/*": ["services/*"],
       "@store/*": ["store/*"],
       "@utils/*": ["utils/*"],
