--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.9",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "openai": "^4.67.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
