--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.59.9",
     "axios": "^1.7.7",
+    "echart": "^0.1.3",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
     "openai": "^4.67.3",
